--- a/sass/blocks/_footer.sass
+++ b/sass/blocks/_footer.sass
@@ -11,7 +11,7 @@
 
 
 	&__wrap
-		margin: 0 auto 63px
+		margin: 0 auto 104px
 		display: grid
 		grid-template-columns: 275px  270px  331px 194px//247px repeat(3, 261px) //257px 257px 257px 257px
 		grid-template-rows: 1fr 40px 93px 
